# ProteiML

./: .gitlab-ci.yml  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
.circleci/: config.yml
.github/workflows/: config.yml
Example_Empty_Directory/data_processing/: constants.py  construct_new_library.py  ensemble_and_cross_validate.py  format_mutation_dataset.py  model_prediction.py  model_training.py  scrape_aaindex_matrix.py
backend_data/: streamlined_property_matrix.csv
data/backend_data/: GCaMP6_lib.csv  Kinetics_Input_Data.csv  full_property_matrix.csv  gcamp7_lib.csv
data/intermediate_data/: combined_dataset.csv  novel_variant_library.csv
data/knr/: ANDN920101_novel_library_predictions.csv  ANDN920101_test_set_predictions.csv  ARGP820101_novel_library_predictions.csv  ARGP820101_test_set_predictions.csv  ARGP820102_novel_library_predictions.csv  ARGP820102_test_set_predictions.csv  ARGP820103_novel_library_predictions.csv  ARGP820103_test_set_predictions.csv  BEGF750101_novel_library_predictions.csv  BEGF750101_test_set_predictions.csv  (+8 more)
data_processing/: constants.py  construct_new_library.py  format_mutation_dataset.py  knr_execute.py  model_prediction.py  model_training.py  scrape_aaindex_matrix.py
docs/: conf.py  config.py  index.rst  install.rst  license.rst  tutorial.rst
tests/: test_construct_new_library.py  test_ensemble_and_cross_validate.py  test_format_mutation_dataset.py  test_fromat_mutation_dataset.py  test_model_prediction.py  test_model_training.py  test_scrape_aaindex_matrix.py
(+61 files in other folders)
