[tool.poetry]
name = "ml_paper"
version = "v0.1.0"
description = "A set of scripts to clean, prepare, and to perform machine-learning analysis on protein mutation libraries."
authors = ["Sarah Wait <sarah.j.wait@gmail.com>"]
readme = "README.md"
packages = [
    { include = "ml_paper" },
]

[tool.poetry.dependencies]
python = "3.8.5"
pandas = "^1.2.4"
numpy = "^1.22.2"
scikit-learn = "^0.24.2"
matplotlib = "^3.3.4"
scipy = "^1.5.2"
seaborn = "0.11.1"
tqdm = "^4.59.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
